@@ -1,0 +1,2 @@
+# This is just a dummy file, read for integrity check
+integrity=1
